# My-ChatServer

./: CMakeLists.txt  README.md
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: db.h
include/server/model/: group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  Main.cpp  charserver.cpp  chatservice.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: reids.cpp
test/testJSON/: testjson  testjson.cc
test/testmoduo/: CMakeLists.txt  Makefile  muduo_server.cc
test/testmoduo/bulic/: CMakeCache.txt  Makefile  cmake_install.cmake
